Добавлены тесты и произведен рефакторинг кода